Bugfix - Login e recuperação de token